# codemp

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  docs.html  package.json
.github/workflows/: ci.yml  java.yml  javascript.yml  lua.yml  python.yml  rust.yml  test.yml
client/nvim/: Cargo.toml  codemp.lua
client/nvim/src/: main.rs
client/vscode/: .bundle.sh  Cargo.toml  package.json
client/vscode/src/: extension.js  lib.rs
java/: build.gradle  settings.gradle
java/src/mp/code/: BufferController.java  Client.java  CursorController.java  Workspace.java
java/src/mp/code/data/: TextChange.java
java/src/mp/code/exceptions/: ChannelException.java  CodeMPLibException.java  DeadlockedException.java  InvalidStateException.java  TransportException.java
plugin/: codemp.vim
proto/: auth.proto  auth_service.proto  buffer.proto  buffer_service.proto  common.proto  core.proto  cursor.proto  cursor_service.proto  files.proto  session.proto  user.proto  workspace.proto  workspace_service.proto
proto/model/: cursor.proto  user.proto
server/: Cargo.toml
server/src/: main.rs
server/src/buffer/: actor.rs  mod.rs  service.rs
server/src/cursor/: service.rs
src/: api.rs  client.rs  cursor.rs  errors.rs  ext.rs  factory.rs  instance.rs  lib.rs  network.rs  prelude.rs  proto.rs  server.rs  state.rs  tools.rs  workspace.rs
src/api/: change.rs  config.rs  controller.rs  cursor.rs  event.rs  factory.rs  mod.rs  user.rs
src/buffer/: client.rs  controller.rs  factory.rs  handle.rs  mod.rs  tools.rs  worker.rs
src/client/: dispatcher.rs  main.rs  manager.rs
src/client/cli/: main.rs
src/client/nvim/: client.rs  codemp.lua  main.rs  mod.rs
src/controller/: buffer.rs  cursor.rs  mod.rs
src/cursor/: client.rs  controller.rs  mod.rs  tracker.rs  worker.rs
src/ffi/: lua.rs  mod.rs  python.rs  python_monolithic.rs
src/ffi/c/: mod.rs
src/ffi/java/: buffer.rs  buffer_controller.rs  client.rs  cursor.rs  cursor_controller.rs  ext.rs  mod.rs  typemap.in  util.rs  utils.rs  workspace.rs
src/ffi/js/: buffer.rs  client.rs  cursor.rs  ext.rs  mod.rs  op_cache.rs  workspace.rs
src/ffi/lua/: buffer.rs  client.rs  cursor.rs  lib.rs  mod.rs  workspace.rs
src/ffi/lua/ext/: a_sync.rs  callback.rs  log.rs  mod.rs
src/ffi/python/: client.rs  controllers.rs  mod.rs  workspace.rs
src/glue/: mod.rs
src/glue/java/: mod.rs
src/lib/: client.rs  cursor.rs  events.rs  lib.rs  opfactory.rs  user.rs
src/lib/operation/: controller.rs  factory.rs  mod.rs  processor.rs
src/operation/: controller.rs  factory.rs  mod.rs  processor.rs
src/server/: events.rs  main.rs  state.rs  workspace.rs
src/server/actor/: buffer.rs  mod.rs  state.rs  workspace.rs
src/server/buffer/: actor.rs  service.rs
src/server/service/: buffer.rs  mod.rs  session.rs  workspace.rs
src/workspace/: controller.rs  mod.rs  service.rs  worker.rs
