[package]
name = "codemp"
description = "codemp -- code multiplexer"
homepage = "https://code.mp"
repository = "https://github.com/hexedtech/codemp"
authors = [
	"alemi <me@alemi.dev>",
	"zaaarf <me@zaaarf.foo>",
	"frelodev <frelodev@gmail.com>",
	"cschen <cschen@codemp.dev>"
]
license = "GPL-3.0-only"
edition = "2021"
version = "0.7.0-beta.3"
exclude = ["dist/*"]

[lib]
name = "codemp"
crate-type = ["cdylib"]

[dependencies]
# core
tracing = "0.1"
thiserror = "1.0"
# crdt
diamond-types = "1.0"
# proto
codemp-proto = "0.7"
uuid = { version = "1.7", features = ["v4"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
# api
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# client
tokio-stream = "0.1"
dashmap = "5.5"

# glue (multiple)
tracing-subscriber = { version = "0.3", optional = true }

# glue (java)
lazy_static = { version = "1.4", optional = true }
jni = { version = "0.21", features = ["invocation"], optional = true }

# glue (lua)
mlua-codemp-patch = { version = "0.10.0-beta.2", features = ["module", "send"], optional = true }

# glue (js)
napi = { version = "2.16", features = ["full"], optional = true } 
napi-derive = { version="2.16",  optional = true}

# glue (python)
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"], optional = true}

# extra
async-trait = { version = "0.1", optional = true }

[build-dependencies]
# glue (js)
napi-build = { version = "2", optional = true }
# glue (python)
pyo3-build-config = { version = "0.19", optional = true }

[features]
default = []
# extra
async-trait = ["dep:async-trait"]
# ffi
rust = [] # used for ci matrix
java = ["lazy_static", "jni", "tracing-subscriber"]
js = ["napi-build", "tracing-subscriber", "napi", "napi-derive"]
python = ["pyo3", "tracing-subscriber", "pyo3-build-config"]
lua = ["mlua-codemp-patch", "tracing-subscriber", "lazy_static"]
lua54 = ["lua", "mlua-codemp-patch/lua54"]
lua53 = ["lua", "mlua-codemp-patch/lua53"]
lua52 = ["lua", "mlua-codemp-patch/lua52"]
lua51 = ["lua", "mlua-codemp-patch/lua51"]
luajit = ["lua", "mlua-codemp-patch/luajit"]


[package.metadata.docs.rs] # enabled features when building on docs.rs
features = ["lua", "java", "js", "python"]
