[package]
name = "codemp"
description = "codemp -- code multiplexer"
homepage = "https://code.mp"
repository = "https://github.com/hexedtech/codemp"
authors = [
	"alemi <me@alemi.dev>",
	"zaaarf <me@zaaarf.foo>",
	"frelodev <frelodev@gmail.com>",
	"cschen <cschen@codemp.dev>"
]
license = "GPL-3.0-only"
edition = "2021"
version = "0.7.2"
exclude = ["dist/*"]

[lib]
name = "codemp"
crate-type = ["cdylib", "rlib"]

[dependencies]
# core
tracing = "0.1"
thiserror = "1.0"
# crdt
diamond-types = "1.0"
# proto
codemp-proto = { git = "https://github.com/hexedtech/codemp-proto", rev = "4879ec7e07da6a720929466375d1181f65afb715", default-features = false }
uuid = { version = "1.10", features = ["v4"] }
tonic = { version = "0.12", features = [], default-features = false }
# api
tokio = { version = "1.40", features = ["macros", "sync", "rt", "time"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# client
tokio-stream = "0.1"
dashmap = "6.1"

# glue (multiple)
tracing-subscriber = { version = "0.3", optional = true }

# glue (java)
lazy_static = { version = "1.5", optional = true }
jni = { version = "0.21", features = ["invocation"], optional = true }
jni-toolbox = { version = "0.2.0", optional = true, features = ["uuid"] }

# glue (lua)
mlua-codemp-patch = { version = "0.10.0-beta.2", features = ["module", "send", "serialize"], optional = true }

# glue (js)
napi = { version = "2.16", features = ["full"], optional = true } 
napi-derive = { version="2.16",  optional = true}

# glue (python)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true}

# extra
async-trait = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true } # just to enable the feature on wasm

[build-dependencies]
# glue (js)
napi-build = { version = "2.1", optional = true }
# glue (python)
pyo3-build-config = { version = "0.22", optional = true }

[features]
default = ["pc"]

# extra
async-trait = ["dep:async-trait"]
serialize = ["dep:serde", "uuid/serde"]
pc = ["tonic/tls-roots", "codemp-proto/client"] # runs on pc
web = ["getrandom"] # runs on web, wasm

# ffi
java = ["lazy_static", "jni", "tracing-subscriber", "jni-toolbox", "pc"]

js = ["napi-build", "tracing-subscriber", "napi", "napi-derive", "pc"]
js-web = ["napi-build", "tracing-subscriber", "napi", "napi-derive", "web"]

py-noabi = ["pyo3", "tracing-subscriber", "pyo3-build-config", "pc"]
py = ["py-noabi", "pyo3/abi3-py38", "pc"]

lua = ["mlua-codemp-patch", "tracing-subscriber", "lazy_static", "serialize", "pc"]
lua54 =["lua", "mlua-codemp-patch/lua54", "pc"] 
luajit = ["lua", "mlua-codemp-patch/luajit", "pc"]


[package.metadata.docs.rs] # enabled features when building on docs.rs
features = ["serialize", "pc"]
