[package]
name = "codemp-server"
version = "0.2.0"
edition = "2021"

[dependencies]
codemp = { path = ".." }
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = { version = "0.9", features = ["tls", "tls-roots"] }
prost = "0.11.8"
md5 = "0.7.0"
uuid = { version = "1.3.1", features = ["v4"] }
operational-transform = { version = "0.6", features = ["serde"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "full"] }
tokio-stream = "0.1"
serde = "1"
serde_json = "1"
clap = { version = "4.2.1", features = ["derive"] }
