[package]
name = "codemp-nvim"
version = "0.2.0"
edition = "2021"

[dependencies]
codemp = { path = "../.." }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3.1", features = ["v4"] }
serde = "1"
serde_json = "1"
rmpv = "1"
clap = { version = "4.2.1", features = ["derive"] }
nvim-rs = { version = "0.5", features = ["use_tokio"] }
async-trait = "0.1.68"
